--- a/jiami.html
+++ b/jiami.html
@@ -33,7 +33,7 @@
     <div class="row h-100 justify-content-center align-items-center">
 
       <div class="col sm-12 col-md-8 col-lg-6">
-        <h2 class="display-4 title"><a href="index.html">加密猫 <img src="assets/logo.png" width="75"></a></h2>
+        <h2 class="display-4 title"><a href="https://cunfe.top/">加密猫 <img src="assets/logo.png" width="75"></a></h2>
         <p class="lead">
           一个免费,
           
@@ -100,7 +100,7 @@
     <nav class="navbar  navbar-light bg-light">
       <ul class="nav navbar-nav mx-auto">
         <li class="nav-item">
-          <div class="nav-link">开发和维护是由 <i class="fas fa-heart" style="color:#e74c3c;"></i>
+          <div class="nav-link">上传是为了加密与解密方便--开发和维护是由 <i class="fas fa-heart" style="color:#e74c3c;"></i>
             <a href="https://github.com/Corydonbyte" target="_blank" class="text-dark"> Corydon Byte提供</a>
             </div>
         </li>
